<resources>
    <string name="app_name">MyApp!</string>
    <!--  activity_main-->
    <string name="main_settings">Settings</string>
    <string name="main_log_out">Log out</string>
    <string name="main_user_photo">My Photo</string>
    <string name="main_user_name">User Name</string>
    <string name="main_user_career">Android Developer</string>
    <string name="main_user_address">65009 New St, 27</string>
    <string name="main_edit_user_profile">Edit profile</string>
    <string name="main_user_contacts">VIEW MY CONTACTS</string>

<!--    AuthActivity-->
    <string name="hello">Hello!</string>
    <string name="auth_register_information">Fill out the profile and go to the application!</string>
    <string name="auth_acquainted">Let\'s get acquainted</string>
    <string name="auth_google">google</string>
    <string name="auth_text_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="auth_text_or">or</string>
    <string name="auth_bt_text_register">Register</string>
    <string name="auth_text_have_account">Already have an account?</string>
    <string name="auth_text_sign_in">Sign in</string>
    <string name="auth_e_mail">E-mail</string>
    <string name="auth_password">Password</string>
    <string name="auth_remember_me">Remember me</string>

    <string name="error_password_letters">Password must include at least 1 letter such as (A-z).</string>
    <string name="error_password_unpredictable_symbols">You can use only letters and numbers.</string>
    <string name="error_password_digit">Password must include at least one digit such as (0–9).</string>
    <string name="error_password_minimum_characters">Your password must include a minimum of 8 characters.</string>
    <string name="error_incorrect_e_mail_address">Incorrect E-Mail address</string>
    <string name="error_email_empty">Email is required.</string>
    <string name="error_password_empty">Password is required.</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>

    <string name="contacts">Contacts</string>
    <string name="contact_add_contacts">Add contacts</string>
    <string name="contact_name_surname">Name Surname</string>
    <string name="contact_profession">profession</string>
    <string name="contact_has_been_removed">contact has been removed</string>
    <string name="contact_restore_information">Restore</string>
    <string name="contact_new_contact">New contact</string>
    <string name="contact_first_name_required">First name (required)</string>
    <string name="contact_last_name_optional">Last name</string>
    <string name="contact_profession_optional">Profession</string>
    <string name="contact_cancel">Cancel</string>
    <string name="save_contact">Save contact</string>
    <string name="error_contact_name">Name should contain letters only, with optional spaces, hyphens, or apostrophes.</string>
    <string name="error_contact_name_length">Name must be between 2 and 20 characters</string>
    <string name="error_contact_name_empty">Name is required</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>

    <string name="google_button_description">Sign in with Google</string>

</resources>